--- a/admin.html
+++ b/admin.html
@@ -72,7 +72,7 @@
 
 <!--loading页结束-->
 <body style="background-color: #f0f0f0">
-<div class="vip-header">
+<div class="vip-header" style="height: 145px">
         <dl>
             <dd>
                 <a href="javascript:(0)"><i class="iconfont icon-tianjiayonghu"></i><i class="iconfont icon-saoma"></i></a>
@@ -90,7 +90,7 @@
             <a href="javascript:(0)">订单</a>
 </div>
 <!-- 会员俱乐部 -->
-<div class="vip-club border_top_bottom">
+<div class="vip-club border_top_bottom" style="margin-top: 0;">
     <div class="vip-club-title border_bottom hexiao">
         <input type="text" placeholder="请输入核销码">
         <a href="default.htm">手动核销</a>
