--- a/reply.html
+++ b/reply.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/loading2.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/rem.js"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/others.js"></script>
+    <script src="js/swiper.jquery.min.js"></script>
     <script type="text/javascript">
         $(window).load(function(){
             $(".scene").fadeOut(1000);
@@ -71,6 +75,7 @@
 
 <!--loading页结束-->
 <body style="background: #F2F2F2">
+<div class="contents" style="display:none">
 <div class="container">
     <div class="reply_title">米诺斯茶餐厅</div>
     <div class="reply_form">
@@ -93,6 +98,7 @@
         <button  type="submit">拒绝</button>
     </div>
 
+</div>
 </div>
 
 </body>
