--- a/top10.html
+++ b/top10.html
@@ -24,6 +24,11 @@
 
         })
     </script>
+    <style>
+        .top_rank{
+            height: 12rem;overflow: scroll;
+        }
+    </style>
 </head>
 <!--loading页开始-->
 <div class="scene" style="">
@@ -41,11 +46,6 @@
     C11.841,5.203,5.203,11.841,5.203,20c0,8.159,6.638,14.797,14.797,14.797S34.797,28.159,34.797,20
     C34.797,11.841,28.159,5.203,20,5.203z" stroke="#ffedec" stroke-width="1" stroke-miterlimit="10">
     </path>
-
-    <!--<path fill="#373a42" d="M20,33.125c-7.237,0-13.125-5.888-13.125-13.125S12.763,6.875,20,6.875S33.125,12.763,33.125,20-->
-    <!--S27.237,33.125,20,33.125z M20,7.078C12.875,7.078,7.078,12.875,7.078,20c0,7.125,5.797,12.922,12.922,12.922-->
-    <!--S32.922,27.125,32.922,20C32.922,12.875,27.125,7.078,20,7.078z">-->
-    <!--</path>-->
     <!--红色部分-->
     <path fill="#2AA198" stroke="#ff2525" stroke-width="1" stroke-miterlimit="10" d="M5.203,20
 			c0-8.159,6.638-14.797,14.797-14.797V5C11.729,5,5,11.729,5,20s6.729,15,15,15v-0.203C11.841,34.797,5.203,28.159,5.203,20z">
@@ -60,86 +60,139 @@
                 dur="2s"
                 repeatCount="indefinite" />
     </path>
-
-    <!--<path fill="#859900" stroke="#859900" stroke-width="0.2027" stroke-miterlimit="10" d="M7.078,20-->
-    <!--c0-7.125,5.797-12.922,12.922-12.922V6.875C12.763,6.875,6.875,12.763,6.875,20S12.763,33.125,20,33.125v-0.203-->
-    <!--C12.875,32.922,7.078,27.125,7.078,20z">-->
-    <!--<animateTransform-->
-    <!--attributeName="transform"-->
-    <!--type="rotate"-->
-    <!--from="0 20 20"-->
-    <!--to="360 20 20"-->
-    <!--dur="1.8s"  -->
-    <!--repeatCount="indefinite" />-->
-    <!--</path>-->
     </svg>
 </div>
 
 <!--loading页结束-->
 
 <body style="background: #F2F2F2">
-<div class="warp warptwo clearfloat">
-    <div class="detail clearfloat">
-        <!--purcon star-->
-        <div class="purlist top10">
-            <table>
-                <tr>
-                    <td rowspan="3"  class="pur_img"> </td>
-                    <td>米诺斯茶餐厅精选二人套餐A</td>
-                </tr>
-                <tr>
-                    <td class="yongjin">¥99.00</td>
-                </tr>
-                <tr>
-                    <td><small>总佣金：</small>¥46.30<span style="float: right">2018.7.20 09:38</span></td>
-                </tr>
-            </table>
-        </div>
-        <div class="yj_cont1">
-            <img src="images/touxiang2.png" style="width: 10%;"><span class="fl">准推广员</span><span>排名：20</span><span>佣金：¥0.34</span>
-        </div>
-        <div class="rank_content">
-            <table>
-                <tr>
-                    <td> <i class="iconfont icon-jiangbei"></i></td>
-                    <td>锤哥
-                        <span>金牌推广员</span>
-                        <span style="float: right">
+<div class="contents" style="display:none">
+    <div class="warp warptwo clearfloat">
+        <div class="detail clearfloat">
+            <!--purcon star-->
+            <div class="purlist top10">
+                <table>
+                    <tr>
+                        <td rowspan="3"><p class="pur_img" style="background: #fff;height: 2rem;width: 2rem"> </p></td>
+                        <td>米诺斯茶餐厅精选二人套餐A</td>
+
+                    </tr>
+
+                    <tr>
+                        <td class="yongjin">¥99.00</td>
+
+                    </tr>
+                    <tr>
+                        <td><small>总佣金：</small>¥46.30<span style="float: right">2018.7.20 09:38</span></td>
+
+                    </tr>
+                </table>
+            </div>
+            <div class="yj_cont1">
+                <img src="images/touxiang2.png" style="width:9%;"><span class="fl">准推广员</span><img src="./images/v1.png" width="6%"><span>排名：20</span><span>佣金：¥0.34</span>
+            </div>
+            <div class="rank_content top_rank">
+                <table>
+                    <tr>
+                        <td> <i class="iconfont icon-jiangbei"></i></td>
+                        <td>锤哥
+                            <span style="border: 1px solid #ff2525;padding: 0 .2rem;color:#ff2525;font-size: .3rem">金牌推广员</span>
+                            <span style="float: right">
                             <i class="iconfont icon-wenhao"></i><i class="iconfont icon-renminbi"></i><small>2.34</small>
                         </span>
-                    </td>
-                    <td>+<i class="iconfont icon-renminbi"></i>2.35</td>
-                </tr>
-                <tr>
-                    <td> <i class="iconfont icon-jiangbei"></i></td>
-                    <td>托尼老师</td>
-                    <td><i class="iconfont icon-renminbi"></i>2.34</td>
-                </tr>
-                <tr>
-                    <td> <i class="iconfont icon-jiangbei"></i></td>
-                    <td>托尼老师</td>
-                    <td><i class="iconfont icon-renminbi"></i>2.34</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>托尼老师</td>
-                    <td><i class="iconfont icon-renminbi"></i>2.34</td>
-                </tr>
-                <tr>
-                    <td> 5</td>
-                    <td>托尼老师</td>
-                    <td><i class="iconfont icon-renminbi"></i>2.34</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+                        </td>
+                        <td>+<i class="iconfont icon-renminbi"></i>3.25</td>
+                    </tr>
+                    <tr>
+                        <td> <i class="iconfont icon-jiangbei"></i></td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td> <i class="iconfont icon-jiangbei"></i></td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td> 5</td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td> 7</td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td> 8</td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>托尼老师</td>
+                        <td><i class="iconfont icon-renminbi"></i>2.34</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
+<script>
+
+    var msg_list_loading = false;
+    $('.top_rank').on('scroll', function(){
+        if ( ! msg_list_loading ){
+            load_more_msg();
+        }
+    })
+
+    function load_more_msg(){
+        var msg_list = $('.top_rank');
+        if ( msg_list.height() + msg_list[0].scrollTop >= msg_list[0].scrollHeight - 60 ) {
+            msg_list_loading = true;
+            // msg_list.append('<div class="loading"></div>');
+            $.get('ajax_data.html').done(function( data ){
+                msg_list.find(".loading").remove();
+                msg_list.append( data );
+                msg_list_loading = false;
+            });
+
+            $.ajax({
+                type: 'POST',
+                url: './json/top10.json',
+                dataType: 'json',
+                success: function (data) {
+                    //将返回值动态加载进下拉框，动态生成标签。
+                    for (var i = 0; i < data.length;i++)
+                    {
+                        // $(".withorw_table ").append($('<option >' + data[i].Conpany + '</option>'));
+
+                        var tc_name = data[i].user_name;
+                        var tc_income = data[i].income1;
+
+                        $(".top_rank table tbody").append(" <tr><td>"+(i+10)+"</td><td>"+tc_name+"</td><td><i class=\"iconfont icon-renminbi\"></i>"+tc_income+"</td></tr>");
+                    }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThown) {
+                    alert("操作失败！");
+                }
+            })
+
+        }
+    }
+</script>
 
 </body>
 
