--- a/verify.html
+++ b/verify.html
@@ -85,14 +85,14 @@
 
         <div class="purlist verify">
             <div class="cname">米诺斯茶餐厅</div>
-            <table>
+            <table  style="    margin-top: .2rem;">
                 <tr>
                     <td rowspan="3"  class="pur_img verify_img"><img src="images/default_img.png" width="100%"> </td>
-                    <td>米诺斯茶餐厅精选二人套餐A</td>
+                    <td >米诺斯茶餐厅精选二人套餐A</td>
                     <td style="text-align: right">x 1</td>
                 </tr>
                 <tr>
-                    <td>河东万达店</td>
+                    <td style="vertical-align: top">河东万达店</td>
                     <td></td>
                 </tr>
                 <tr>
