--- a/withdorw-history.html
+++ b/withdorw-history.html
@@ -77,38 +77,40 @@
 
 <!--loading页结束-->
 <body style="background: #F2F2F2">
+<div class="contents" style="display: none">
 <div class="warp warptwo clearfloat">
     <div class="detail clearfloat">
         <!--purcon star-->
         <div class="purlist reply_list">
-            <table>
+            <table class="tixian_history">
                 <tr>
-                    <td class="tixian_date">提现<br>打款时间：<span class="date">2018.10.03 07:40</span></td>
+                    <td class="tixian_date">提现<br><span class="date">打款时间：2018.10.03 07:40</span></td>
                     <td class="refuse money">-20.00</td>
                 </tr>
                 <tr>
-                    <td class="tixian_date">提现<br>打款时间：<span class="date">2018.10.03 07:40</span></td>
+                    <td class="tixian_date">提现<br><span class="date">打款时间：2018.10.03 07:40</span></td>
                     <td class="refuse money">-20.00</td>
                 </tr>
                 <tr>
-                    <td class="tixian_date">提现<br>打款时间：<span class="date">2018.10.03 07:40</span></td>
+                    <td class="tixian_date">提现<br><span class="date">打款时间：2018.10.03 07:40</span></td>
                     <td class="refuse money">-20.00</td>
                 </tr>
                 <tr>
-                    <td class="tixian_date">提现<br>打款时间：<span class="date">2018.10.03 07:40</span></td>
+                    <td class="tixian_date">提现<br><span class="date">打款时间：2018.10.03 07:40</span></td>
                     <td class="refuse money">-20.00</td>
                 </tr>
                 <tr>
-                    <td class="tixian_date">提现<br>打款时间：<span class="date">2018.10.03 07:40</span></td>
+                    <td class="tixian_date">提现<br><span class="date">打款时间：2018.10.03 07:40</span></td>
                     <td class="refuse money">-20.00</td>
                 </tr>
                 <tr>
-                    <td class="tixian_date">提现<br>打款时间：<span class="date">2018.10.03 07:40</span></td>
+                    <td class="tixian_date">提现<br><span class="date">打款时间：2018.10.03 07:40</span></td>
                     <td class="refuse money">-20.00</td>
                 </tr>
             </table>
         </div>
     </div>
+</div>
 </div>
 <script type="text/javascript">
     var down = document.getElementById("down");
