--- a/admin-orders.html
+++ b/admin-orders.html
@@ -43,11 +43,6 @@
     C11.841,5.203,5.203,11.841,5.203,20c0,8.159,6.638,14.797,14.797,14.797S34.797,28.159,34.797,20
     C34.797,11.841,28.159,5.203,20,5.203z" stroke="#ffedec" stroke-width="1" stroke-miterlimit="10">
     </path>
-
-    <!--<path fill="#373a42" d="M20,33.125c-7.237,0-13.125-5.888-13.125-13.125S12.763,6.875,20,6.875S33.125,12.763,33.125,20-->
-    <!--S27.237,33.125,20,33.125z M20,7.078C12.875,7.078,7.078,12.875,7.078,20c0,7.125,5.797,12.922,12.922,12.922-->
-    <!--S32.922,27.125,32.922,20C32.922,12.875,27.125,7.078,20,7.078z">-->
-    <!--</path>-->
     <!--红色部分-->
     <path fill="#2AA198" stroke="#ff2525" stroke-width="1" stroke-miterlimit="10" d="M5.203,20
 			c0-8.159,6.638-14.797,14.797-14.797V5C11.729,5,5,11.729,5,20s6.729,15,15,15v-0.203C11.841,34.797,5.203,28.159,5.203,20z">
@@ -62,18 +57,6 @@
                 dur="2s"
                 repeatCount="indefinite" />
     </path>
-
-    <!--<path fill="#859900" stroke="#859900" stroke-width="0.2027" stroke-miterlimit="10" d="M7.078,20-->
-    <!--c0-7.125,5.797-12.922,12.922-12.922V6.875C12.763,6.875,6.875,12.763,6.875,20S12.763,33.125,20,33.125v-0.203-->
-    <!--C12.875,32.922,7.078,27.125,7.078,20z">-->
-    <!--<animateTransform-->
-    <!--attributeName="transform"-->
-    <!--type="rotate"-->
-    <!--from="0 20 20"-->
-    <!--to="360 20 20"-->
-    <!--dur="1.8s"  -->
-    <!--repeatCount="indefinite" />-->
-    <!--</path>-->
     </svg>
 </div>
 <!--loading页结束-->
@@ -85,7 +68,7 @@
         <input class="jcDate " value="2018-8-2" style="width:80%;font-weight: bold;border: none;font-size: .5rem; padding:.5rem 0;" /><i class="iconfont icon-jiantou1 fr" style="margin-top: .5rem;"></i>
     </div>
 </div>
-<div class="withorw">
+<div class="withorw" style="height: 14rem;overflow: scroll">
     <table class="withorw_table">
         <tr>
             <td class="withorw_table_td_11">米诺斯茶餐厅精选二人 套餐A<br><span>2018.7.04 17:26  &nbsp;&nbsp;核销人:罗大佑</span></td>
@@ -111,8 +94,24 @@
             <td class="withorw_table_td_11">米诺斯茶餐厅精选二人 套餐A<br><span>2018.7.04 17:26  &nbsp;&nbsp;核销人:罗大佑</span></td>
             <td class="price">¥199</td>
         </tr>
+        <tr>
+            <td class="withorw_table_td_11">米诺斯茶餐厅精选二人 套餐A<br><span>2018.7.04 17:26  &nbsp;&nbsp;核销人:罗大佑</span></td>
+            <td class="price">¥199</td>
+        </tr>
+        <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
+        <tr>
+            <td class="withorw_table_td_11">米诺斯茶餐厅精选二人 套餐A<br><span>2018.7.04 17:26  &nbsp;&nbsp;核销人:罗大佑</span></td>
+            <td class="price">¥199</td>
+        </tr>
+        <tr>
+            <td class="withorw_table_td_11">米诺斯茶餐厅精选二人 套餐A<br><span>2018.7.04 17:26  &nbsp;&nbsp;核销人:罗大佑</span></td>
+            <td class="price">¥199</td>
+        </tr>
+        <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
+        <tr><td class="withorw_table_td_11">米诺斯茶餐厅精选二人 套餐A<br><span>2018.7.04 17:26  &nbsp;&nbsp;核销人:罗大佑</span></td><td class="price">¥199</td></tr>
 
     </table>
+
 </div>
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/jQuery-jcDate.js" charset="utf-8"></script>
@@ -130,6 +129,52 @@
     });
 
 </script>
+    <script>
+
+        var msg_list_loading = false;
+        $('.withorw').on('scroll', function(){
+            if ( ! msg_list_loading ){
+                load_more_msg();
+            }
+        })
+
+        function load_more_msg(){
+            var msg_list = $('.withorw');
+            if ( msg_list.height() + msg_list[0].scrollTop >= msg_list[0].scrollHeight - 60 ) {
+                msg_list_loading = true;
+                // msg_list.append('<div class="loading"></div>');
+                $.get('ajax_data.html').done(function( data ){
+                    msg_list.find(".loading").remove();
+                    msg_list.append( data );
+                    msg_list_loading = false;
+                });
+
+                $.ajax({
+                    type: 'POST',
+                    url: './json/admin-orders.json',
+                    dataType: 'json',
+                    success: function (data) {
+
+                        //将返回值动态加载进下拉框，动态生成标签。
+                        // alert( 123);
+                        for (var i = 0; i < data.length;i++)
+                        {
+                            // $(".withorw_table ").append($('<option >' + data[i].Conpany + '</option>'));
+                            var tc_name = data[i].name;
+                            var tc_date = data[i].order_time;
+                            var tc_person = data[i].check_person;
+                            var tc_income = data[i].income;
+                            $(".withorw_table ").append("<tr><td class='withorw_table_td_11'>"+tc_name+"<br><span>"+tc_date+"&nbsp;&nbsp;核销人:"+tc_person+"</span></td><td class='price'>"+tc_income+"</td></tr>");
+                        }
+                    },
+                    error: function (XMLHttpRequest, textStatus, errorThown) {
+                        alert("操作失败！");
+                    }
+                })
+
+            }
+        }
+    </script>
 </div>
 </body>
 
