--- a/income-detail.html
+++ b/income-detail.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8" />
-    <title>支付成功</title>
+    <title>店铺名</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="stylesheet" type="text/css" href="css/center.css" />
     <link rel="stylesheet" type="text/css" href="css/loaders.min.css"/>
@@ -20,6 +20,18 @@
 
         })
     </script>
+    <style>
+        #detail .price, #detail2 .price{
+            font-size: 0.5rem;
+        }
+        .income_import_r table tr td:nth-child(2) span{
+            font-size: 0.45rem;
+        }
+        .withorw{
+            height: 10rem;
+            overflow: scroll;
+        }
+    </style>
 </head>
 <!--loading页开始-->
 <div class="scene" style="">
@@ -37,12 +49,6 @@
     C11.841,5.203,5.203,11.841,5.203,20c0,8.159,6.638,14.797,14.797,14.797S34.797,28.159,34.797,20
     C34.797,11.841,28.159,5.203,20,5.203z" stroke="#ffedec" stroke-width="1" stroke-miterlimit="10">
     </path>
-
-    <!--<path fill="#373a42" d="M20,33.125c-7.237,0-13.125-5.888-13.125-13.125S12.763,6.875,20,6.875S33.125,12.763,33.125,20-->
-    <!--S27.237,33.125,20,33.125z M20,7.078C12.875,7.078,7.078,12.875,7.078,20c0,7.125,5.797,12.922,12.922,12.922-->
-    <!--S32.922,27.125,32.922,20C32.922,12.875,27.125,7.078,20,7.078z">-->
-    <!--</path>-->
-    <!--红色部分-->
     <path fill="#2AA198" stroke="#ff2525" stroke-width="1" stroke-miterlimit="10" d="M5.203,20
 			c0-8.159,6.638-14.797,14.797-14.797V5C11.729,5,5,11.729,5,20s6.729,15,15,15v-0.203C11.841,34.797,5.203,28.159,5.203,20z">
         <animateTransform
@@ -56,26 +62,14 @@
                 dur="2s"
                 repeatCount="indefinite" />
     </path>
-
-    <!--<path fill="#859900" stroke="#859900" stroke-width="0.2027" stroke-miterlimit="10" d="M7.078,20-->
-    <!--c0-7.125,5.797-12.922,12.922-12.922V6.875C12.763,6.875,6.875,12.763,6.875,20S12.763,33.125,20,33.125v-0.203-->
-    <!--C12.875,32.922,7.078,27.125,7.078,20z">-->
-    <!--<animateTransform-->
-    <!--attributeName="transform"-->
-    <!--type="rotate"-->
-    <!--from="0 20 20"-->
-    <!--to="360 20 20"-->
-    <!--dur="1.8s"  -->
-    <!--repeatCount="indefinite" />-->
-    <!--</path>-->
     </svg>
 </div>
 
 <!--loading页结束-->
 <body style="background: #F2F2F2">
-
-<div class="sc_rank">
-    <p>您当前的等级是<img src="">准推广会员 </p>
+<div class="contents" style="display:none">
+<div class="sc_rank" style="    padding: .5rem 0;">
+    <p>您当前的等级是<img src="./images/v3.png" style=" margin: 0 .2rem;    width: 7%;">准推广会员 </p>
     <!--进度条-->
     <div class="progressbar">
         <div class="shim" style="height: 84px;">
@@ -93,14 +87,14 @@
     <!--进度条-->
     <p id="sc_rank_con3"><img src="">您已是<span class="rank_next">本店金牌推广员</span>，享受店铺收入双份佣金 <i class="iconfont icon-jiantou1"></i></p>
 </div>
-<div class="warp warptwo clearfloat">
+<div class="warp warptwo clearfloat" style="margin-top: 3%">
     <div class="detail clearfloat">
         <div class="tg_more">
             <div class="xuzhi" style="padding: 0 0;">
                 <script type="text/javascript">
                     $(function(){
                         var tabNum=$(".important").find("li");
-                        var contentNum=$(".contents").children();
+                        var contentNum=$(".contents2").children();
                         var timer;
                         $(tabNum).each(function(index){
                             $(this).hover(function(){
@@ -131,27 +125,36 @@
                     </li>
 
                 </ul>
-                <div class="contents">
+                <div class="contents2">
                     <div class="cl">
                         <div class="important_r income_import_r">
                             <div class="withorw">
-                                <table class="withorw_table">
+                                <table class="withorw_table" id="detail">
                                     <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                                     <tr>
                                         <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:35</span></td>
-                                        <td class="price"><br>¥199<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                        <td class="price">¥2.35<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
                                     </tr>
                                     <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                                     <tr>
                                         <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:35</span></td>
-                                        <td class="price">¥199<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                        <td class="price">¥2.34<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
                                     </tr>
                                     <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                                     <tr>
                                         <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:55</span></td>
-                                        <td class="price">¥199<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                        <td class="price">¥2.35<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
                                     </tr>
 
+                                    <tr>
+                                        <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:35</span></td>
+                                        <td class="price">¥2.34<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                    </tr>
+                                    <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
+                                    <tr>
+                                        <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:55</span></td>
+                                        <td class="price">¥2.35<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                    </tr>
 
                                 </table>
                             </div>
@@ -161,21 +164,21 @@
                     <div class="cl" style="display: none">
                         <div class="important_r income_import_r">
                             <div class="withorw">
-                                <table class="withorw_table">
+                                <table class="withorw_table"  id="detail2">
                                     <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                                     <tr>
                                         <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:35</span></td>
-                                        <td class="price"><br>¥199<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                        <td class="price">¥2.34<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
                                     </tr>
                                     <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                                     <tr>
                                         <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:35</span></td>
-                                        <td class="price">¥199<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                        <td class="price">¥2.43<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
                                     </tr>
                                     <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                                     <tr>
                                         <td class="withorw_table_td_11">米诺斯茶餐厅<br><span>2018.7.04 17:26:55</span></td>
-                                        <td class="price">¥199<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
+                                        <td class="price">¥2.34<span>+<i class="iconfont icon-renminbi"></i>3.25 </span><i class="iconfont icon-jiantou1"></i></td>
                                     </tr>
 
 
@@ -188,6 +191,55 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+<script>
+
+    var msg_list_loading = false;
+    $('.withorw').on('scroll', function(){
+        if ( ! msg_list_loading ){
+            load_more_msg();
+        }
+    })
+
+    function load_more_msg(){
+        var msg_list = $('.withorw');
+        if ( msg_list.height() + msg_list[0].scrollTop >= msg_list[0].scrollHeight - 60 ) {
+            msg_list_loading = true;
+            // msg_list.append('<div class="loading"></div>');
+            $.get('ajax_data.html').done(function( data ){
+                msg_list.find(".loading").remove();
+                msg_list.append( data );
+                msg_list_loading = false;
+            });
+
+            $.ajax({
+                type: 'POST',
+                url: './json/income-detail.json',
+                dataType: 'json',
+                success: function (data) {
+
+                    //将返回值动态加载进下拉框，动态生成标签。
+                    // alert( 123);
+                    for (var i = 0; i < data.length;i++)
+                    {
+                        // $(".withorw_table ").append($('<option >' + data[i].Conpany + '</option>'));
+                        var tc_name = data[i].name;
+                        var tc_date = data[i].order_time;
+                        var tc_price1 = data[i].income1;
+                        var tc_price2 = data[i].income2;
+
+                        $(".withorw_table ").append("<tr><td class='withorw_table_td_11'>"+tc_name+"<br><span>"+tc_date+"</span></td><td class='price'>¥"+tc_price1+"<span>+<i class='iconfont icon-renminbi'></i>"+tc_price2+"</span><i class='iconfont icon-jiantou1'></i></td>");
+                    }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThown) {
+                    alert("操作失败！");
+                }
+            })
+
+        }
+    }
+</script>
 
 </body>
 
